--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center">
-          <h1 class="logo mr-auto"><a href="index.html">Association de Soutien des Jeunes par les Jeunes du Burundi</a></h1>
+          <h1 class="logo mr-auto"><a href="index.html">
+
+Association des jeunes pour le développement du Burundi. AJEDEBU
+</a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -84,7 +87,7 @@
             <div class="carousel-container">
               <div class="container">
                 <h2 class="animate__animated animate__fadeInDown"> Together we can.</h2>
-                <p class="animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p class="animate__animated animate__fadeInUp">ASOJEBU is an association created by young students from Canada and Burundi to support compatriots who are in need. Thus, to integrate easily into society and participate in their own development and that of the country.</p>
                 <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
               </div>
             </div>
@@ -93,9 +96,8 @@
           <div class="carousel-item" style="background-image: url(assets/img/intro-carousel/2.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">At vero eos et accusamus</h2>
-                <p class="animate__animated animate__fadeInUp">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <h2 class="animate__animated animate__fadeInDown">Youth education </h2>
+                <p class="animate__animated animate__fadeInUp">ASOJEBU is located in Burundi in the region of East Africa. The association pays the school fees for these young people, offers financial support to destitute families and ensures the professional integration of these young people after their schooling.</p>
               </div>
             </div>
           </div>
@@ -103,34 +105,16 @@
           <div class="carousel-item" style="background-image: url(assets/img/intro-carousel/3.jpg)">
             <div class="carousel-container">
               <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">la vie de tout être humain</h2>
-                <p class="animate__animated animate__fadeInUp">Beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt omnis iste natus error sit voluptatem accusantium.</p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
+                <h2 class="animate__animated animate__fadeInDown"> Women empowerment </h2>
+                <p class="animate__animated animate__fadeInUp">Facilitate the integration of young people and women in socio-economic development. Promote the empowerment of women to meet their needs and those of their country.</p>
               </div>
             </div>
           </div>
 
-          <div class="carousel-item" style="background-image: url(assets/img/intro-carousel/4.jpg)">
-            <div class="carousel-container">
-              <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Nam libero tempore</h2>
-                <p class="animate__animated animate__fadeInUp">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum.</p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
-              </div>
-            </div>
-          </div>
+     
 
-          <div class="carousel-item" style="background-image: url(assets/img/intro-carousel/5.jpg)">
-            <div class="carousel-container">
-              <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">Magnam aliquam quaerat</h2>
-                <p class="animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <a href="#featured-services" class="btn-get-started scrollto animate__animated animate__fadeInUp">Get Started</a>
-              </div>
-            </div>
-          </div>
 
-        </div>
+  
 
         <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
@@ -165,7 +149,7 @@
               </div>
               <h2 class="title"><a href="#">Our Mission</a></h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Contribute to the educational development of poor young people in Burundi. Facilitate the integration of young people and women in socio-economic development. Promote the empowerment of women to meet their needs and those of their country.
               </p>
             </div>
           </div>
@@ -178,7 +162,22 @@
               </div>
               <h2 class="title"><a href="#">Our Plan</a></h2>
               <p>
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+               Youth education:
+  
+  -provide essential tools to all the youth in order to improve their education. 
+
+  -Contribute towards the «Zero hunger» concept so that kids achieve the best academic performance.
+
+  -Create an incentive academic program for the youth so that they be motivated to get excellent grades and also finish school
+
+
+ Women empowerment 
+
+ Create a program that will support them to start a small profitable business.
+
+ Start awareness programs in order to let all the women know their rights and values.
+
+ Create Campaigns that promotes gender equality in all aspects.
               </p>
             </div>
           </div>
@@ -206,8 +205,25 @@
     <!-- ======= Call To Action Section ======= -->
     <section id="call-to-action">
       <div class="container text-center" data-aos="zoom-in">
-        <h3>Call To Action</h3>
-        <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h3>We beleive</h3>
+        <p> 
+
+          Youth education:
+  
+  -provide essential tools to all the youth in order to improve their education. 
+
+  -Contribute towards the «Zero hunger» concept so that kids achieve the best academic performance.
+
+  -Create an incentive academic program for the youth so that they be motivated to get excellent grades and also finish school
+
+
+ Women empowerment 
+
+ Create a program that will support them to start a small profitable business.
+
+ Start awareness programs in order to let all the women know their rights and values.
+
+ Create Campaigns that promotes gender equality in all aspects.</p>
         <a class="cta-btn" href="#">Call To Action</a>
       </div>
     </section><!-- End Call To Action Section -->
